force-app/main/default/objects/Faturamento__c/Faturamento__c.object-meta.xml
<CustomObject>
    <label>Faturamento</label>
    <nameField>
        <label>Número</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faturamentos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>