force-app/main/default/objects/Faturamento__c/fields/apk__c.field-meta.xml
<CustomField>
    <fullName>apk__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>chave priamria</description>
    <inlineHelpText>chave priamria</inlineHelpText>
    <label>apk</label>
    <length>220</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>