force-app/main/default/objects/Faturamento__c/fields/Canhoto_assinado__c.field-meta.xml
<CustomField>
    <fullName>Canhoto_assinado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canhoto assinado</label>
    <type>Checkbox</type>
</CustomField>