force-app/main/default/objects/Faturamento__c/fields/Canhoto_Assinado_rel__c.field-meta.xml
<CustomField>
    <fullName>Canhoto_Assinado_rel__c</fullName>
    <formula>IF(
    Canhoto_assinado__c == true,
    &apos;Sim&apos;,
    &apos;Não&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canhoto Assinado</label>
    <type>Text</type>
</CustomField>