force-app/main/default/objects/Faturamento__c/fields/Chave_de_acesso__c.field-meta.xml
<CustomField>
    <fullName>Chave_de_acesso__c</fullName>
    <label>Chave de acesso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>