force-app/main/default/objects/Faturamento__c/fields/Contrato_de_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Servi_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>contrato (old)</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Faturamento</relationshipLabel>
    <relationshipName>Faturamentos</relationshipName>
    <type>Lookup</type>
</CustomField>