force-app/main/default/objects/Faturamento__c/fields/Contrato_de_servico__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_servico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contrato_de_Servi_o__c</referenceTo>
    <relationshipLabel>Faturamento</relationshipLabel>
    <relationshipName>Faturamentos</relationshipName>
    <type>Lookup</type>
</CustomField>