force-app/main/default/objects/Faturamento__c/fields/Demonstra_o__c.field-meta.xml
<CustomField>
    <fullName>Demonstra_o__c</fullName>
    <formula>Pedido__r.Demonstracao__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demonstração</label>
    <type>Text</type>
</CustomField>