force-app/main/default/objects/Faturamento__c/fields/Departamento2__c.field-meta.xml
<CustomField>
    <fullName>Departamento2__c</fullName>
    <label>Departamento (old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Governo</fullName>
            </value>
            <value>
                <fullName>Serviço</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>