force-app/main/default/objects/Faturamento__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <formula>TEXT(Pedido__r.Departamento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento (old)</label>
    <type>Text</type>
</CustomField>