force-app/main/default/objects/Faturamento__c/fields/Faturamento_Feito2__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_Feito2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Faturamento feito</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Faturamento (Faturamento Feito)</relationshipLabel>
    <relationshipName>Faturamentos</relationshipName>
    <type>Lookup</type>
</CustomField>