force-app/main/default/objects/Faturamento__c/fields/Faturamento_Feito__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_Feito__c</fullName>
    <label>Faturamento Feito (del)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospcom</fullName>
            </value>
            <value>
                <fullName>Fabricas</fullName>
            </value>
            <value>
                <fullName>Parceiros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>