force-app/main/default/objects/Faturamento__c/fields/Faturamento_pai__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_pai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faturamento pai</label>
    <referenceTo>Faturamento__c</referenceTo>
    <relationshipLabel>Faturamento filhos</relationshipLabel>
    <relationshipName>Faturamentos</relationshipName>
    <type>Lookup</type>
</CustomField>