force-app/main/default/objects/Faturamento__c/fields/ID_do_Faturamento__c.field-meta.xml
<CustomField>
    <fullName>ID_do_Faturamento__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID do Faturamento</label>
    <type>Text</type>
</CustomField>