force-app/main/default/objects/Faturamento__c/fields/Identificacao_fiscal_da_conta__c.field-meta.xml
<CustomField>
    <fullName>Identificacao_fiscal_da_conta__c</fullName>
    <label>Identificação fiscal da conta*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>