force-app/main/default/objects/Faturamento__c/fields/Mes_de_faturamento__c.field-meta.xml
<CustomField>
    <fullName>Mes_de_faturamento__c</fullName>
    <formula>MONTH(DATEVALUE(Data__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes de faturamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>