force-app/main/default/objects/Faturamento__c/fields/Mes_do_Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Mes_do_Faturamento__c</fullName>
    <formula>Data__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês do Faturamento</label>
    <type>Date</type>
</CustomField>