force-app/main/default/objects/Faturamento__c/fields/N_do_Contrato__c.field-meta.xml
<CustomField>
    <fullName>N_do_Contrato__c</fullName>
    <formula>Contrato_de_servico__r.N_mero_da_Proposta_Contrato__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N do Contrato</label>
    <type>Text</type>
</CustomField>