force-app/main/default/objects/Faturamento__c/fields/Nao_Aplicavel__c.field-meta.xml
<CustomField>
    <fullName>Nao_Aplicavel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Não Aplicável</label>
    <type>Checkbox</type>
</CustomField>