force-app/main/default/objects/Faturamento__c/fields/Natureza_de_Operacao__c.field-meta.xml
<CustomField>
    <fullName>Natureza_de_Operacao__c</fullName>
    <formula>TEXT(Pedido__r.Natureza_de_Opera_o__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Natureza de Operação</label>
    <type>Text</type>
</CustomField>