force-app/main/default/objects/Faturamento__c/fields/Nome_da_Conta2__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Conta2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nome da conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Faturamentos</relationshipLabel>
    <relationshipName>Faturas</relationshipName>
    <type>Lookup</type>
</CustomField>