force-app/main/default/objects/Faturamento__c/fields/Nome_da_Conta__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Conta__c</fullName>
    <formula>Nome_da_Conta2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Conta (del)</label>
    <type>Text</type>
</CustomField>