force-app/main/default/objects/Faturamento__c/fields/Numero_do_Documento_SAP__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Documento_SAP__c</fullName>
    <label>Número do Documento SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>