force-app/main/default/objects/Faturamento__c/fields/Numero_do_pedido__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_pedido__c</fullName>
    <formula>Pedido__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero do pedido</label>
    <type>Text</type>
</CustomField>