force-app/main/default/objects/Faturamento__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Se Oportunidade:
- Contrato de Serviços Corretiva/Preventiva/Metrologia (Serviço+Peça)
- Assistência : Preventiva : Avulso Pacote (Serviço+Peça)
- Assistência : Metrologia : Avulso Pacote (Serviço)</description>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Pagamentos</relationshipName>
    <type>Lookup</type>
</CustomField>