force-app/main/default/objects/Faturamento__c/fields/Ordem_de_Trabalho__c.field-meta.xml
<CustomField>
    <fullName>Ordem_de_Trabalho__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Se Ordem de Trab.:
- Assistência : Corretiva : Avulso Unitário/Pacote/AddContrato (Serviço)
-*Assistência : Preventiva : Avulso Unitário (Serviço+Peça)
-*Assistência : Metrologia : Avulso Unitário (Serviço)</description>
    <label>Ordem de trabalho</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>Faturamentos</relationshipName>
    <type>Lookup</type>
</CustomField>