force-app/main/default/objects/Faturamento__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <formula>IF(OR(Pedido__r.Opportunity.Name != &quot;&quot;, Pedido__r.Quote.Name != &quot;&quot;),&quot;Opp/Cotações&quot;,
IF(Pedido__r.Ordem_de_trabalho__c != &quot;&quot;,&quot;Ordem de Trabalho&quot;,
IF(Pedido__r.Demonstracao__c != &quot;&quot;, &quot;Demonstração&quot;,
IF( Contrato_de_servico__c != &quot;&quot;, &quot;Contrato&quot;, &quot;Outros&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origem</label>
    <type>Text</type>
</CustomField>