force-app/main/default/objects/Faturamento__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Se Pedido de Oportunidade:
- Comercial Público (Produtos)
- Comercial Privado (Produtos)

Se Pedido de Ordem de Trab.:
- Assistência : Corretiva : Avulso Unitário/Pacote/AddContrato (Peças)</description>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Faturamentos</relationshipName>
    <type>Lookup</type>
</CustomField>