force-app/main/default/objects/Faturamento__c/fields/Periodo_de_Faturamento_Fim__c.field-meta.xml
<CustomField>
    <fullName>Periodo_de_Faturamento_Fim__c</fullName>
    <label>Periodo de Faturamento (Fim)</label>
    <type>Date</type>
</CustomField>