force-app/main/default/objects/Faturamento__c/fields/Periodo_filtro__c.field-meta.xml
<CustomField>
    <fullName>Periodo_filtro__c</fullName>
    <formula>CASE(
    MONTH(DATEVALUE(Data__c)),
    1, &quot;01 – Janeiro&quot;,
    2, &quot;02 – Fevereiro&quot;,
    3, &quot;03 – Março&quot;,
    4, &quot;04 – Abril&quot;,
    5, &quot;05 – Maio&quot;,
    6, &quot;06 – Junho&quot;,
    7, &quot;07 – Julho&quot;,
    8, &quot;08 – Agosto&quot;,
    9, &quot;09 – Setembro&quot;,
    10, &quot;10 – Outubro&quot;,
    11, &quot;11 – Novembro&quot;,
    12, &quot;12 – Dezembro&quot;,
    &quot;Mês Inválido&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Período (filtro)</label>
    <type>Text</type>
</CustomField>