force-app/main/default/objects/Faturamento__c/fields/Procedencia__c.field-meta.xml
<CustomField>
    <fullName>Procedencia__c</fullName>
    <label>Procedência (automático)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contrato de Serviço</fullName>
            </value>
            <value>
                <fullName>Contrato de Locação</fullName>
            </value>
            <value>
                <fullName>Serviço Avulso (Contrato de Serviço)</fullName>
            </value>
            <value>
                <fullName>Serviço Avulso (Contrato de Locação)</fullName>
            </value>
            <value>
                <fullName>Serviço Avulso</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Governo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>