force-app/main/default/objects/Faturamento__c/fields/Procedencia_v2__c.field-meta.xml
<CustomField>
    <fullName>Procedencia_v2__c</fullName>
    <formula>IF(
	OR(
		TEXT(Procedencia__c) == &apos;Contrato de Serviço&apos;,
		TEXT(Procedencia__c) == &apos;Contrato de Locação&apos;,
		TEXT(Procedencia__c) == &apos;Serviço Avulso (Contrato de Serviço)&apos;,
		TEXT(Procedencia__c) == &apos;Serviço Avulso (Contrato de Locação)&apos;,
		TEXT(Procedencia__c) == &apos;Serviço Avulso&apos;
	),
	&apos;Serviço&apos;,
	IF(
		TEXT(Nome_da_Conta2__r.Type) == &apos;PRIVADO&apos;,
		&apos;Comercial&apos;,
		IF(
			OR(
				TEXT(Nome_da_Conta2__r.Type) == &apos;PUBLICO&apos;,
				TEXT(Nome_da_Conta2__r.Type) == &apos;FILANTROPIA&apos;
			),
			&apos;Governo&apos;,
			&apos;&apos;
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procedência</label>
    <type>Text</type>
</CustomField>