force-app/main/default/objects/Faturamento__c/fields/Qtd_Ativos__c.field-meta.xml
<CustomField>
    <fullName>Qtd_Ativos__c</fullName>
    <label>Qtd Ativos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>