force-app/main/default/objects/Faturamento__c/fields/Quantidade_de_volumes__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_volumes__c</fullName>
    <label>Quantidade de volumes</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>