force-app/main/default/objects/Faturamento__c/fields/Reg_Ativos__c.field-meta.xml
<CustomField>
    <fullName>Reg_Ativos__c</fullName>
    <formula>IF(
     Data__c &lt; DATETIMEVALUE(&quot;2017-10-25 02:00:00&quot;)
    , IMAGE(&quot;https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=0155A000009LQKQ&amp;oid=00Di0000000JVhH&amp;lastMod=1508958423000&quot;, &quot;&quot; , 30, 30)
    , IF( AND(Nao_Aplicavel__c == false,  OR(Qtd_Ativos__c == null,  Qtd_Ativos__c == 0))
        , IMAGE(&quot;https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=01531000008stX6&amp;oid=00Di0000000JVhH&amp;lastMod=1502729868000&quot;, &quot;&quot; , 30, 30)
        , IMAGE(&quot;https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=01531000008stOs&amp;oid=00Di0000000JVhH&amp;lastMod=1502730159000&quot;, &quot;&quot; , 30, 30)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg Ativos</label>
    <type>Text</type>
</CustomField>