force-app/main/default/objects/Faturamento__c/fields/Regional_de_Servico__c.field-meta.xml
<CustomField>
    <fullName>Regional_de_Servico__c</fullName>
    <formula>IF(
OR(
Nome_da_Conta2__r.BillingState == &apos;Goiás&apos;, 
Nome_da_Conta2__r.BillingState == &apos;Mato Grosso&apos;), &apos;GO/MT&apos;,
IF(
OR(
Nome_da_Conta2__r.BillingState == &quot;Acre&quot;,
Nome_da_Conta2__r.BillingState == &quot;Amazonas&quot;,
Nome_da_Conta2__r.BillingState == &quot;Amapá&quot;,
Nome_da_Conta2__r.BillingState == &quot;Pará&quot;,
Nome_da_Conta2__r.BillingState == &quot;Rondônia&quot;,
Nome_da_Conta2__r.BillingState == &quot;Roraima&quot;), &apos;NORTE&apos;,
IF(
Nome_da_Conta2__r.BillingState == &apos;Tocantins&apos;, &apos;TO&apos;,
IF(
Nome_da_Conta2__r.BillingState == &apos;Distrito Federal&apos;, &apos;DF&apos;,
&apos;SP/MS e demais regiões&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional de Serviço</label>
    <type>Text</type>
</CustomField>