force-app/main/default/objects/Faturamento__c/fields/Representacao__c.field-meta.xml
<CustomField>
    <fullName>Representacao__c</fullName>
    <formula>IF(
	OR(
		Faturamento_Feito2__r.Id == &apos;001i00000085QYb&apos;,
		Faturamento_Feito2__r.Id == &apos;0015A00001yGbVZ&apos;,
		Faturamento_Feito2__r.Id == &apos;0015A00001tSrPa&apos;
	),
	&apos;Não&apos;,
	&apos;Sim&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Representação</label>
    <type>Text</type>
</CustomField>