force-app/main/default/objects/Faturamento__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
            </value>
            <value>
                <fullName>Fechado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>NÃO RECEBIDO</fullName>
                <isActive>false</isActive>
                <label>NÃO RECEBIDO</label>
            </value>
            <value>
                <fullName>RECEBIMENTO PARCIAL</fullName>
                <isActive>false</isActive>
                <label>RECEBIMENTO PARCIAL</label>
            </value>
            <value>
                <fullName>RECEBIMENTO TOTAL</fullName>
                <isActive>false</isActive>
                <label>RECEBIMENTO TOTAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>