force-app/main/default/objects/Faturamento__c/fields/status_do_pedido__c.field-meta.xml
<CustomField>
    <fullName>status_do_pedido__c</fullName>
    <formula>TEXT(Pedido__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>status do pedido</label>
    <type>Text</type>
</CustomField>