force-app/main/default/objects/Faturamento__c/fields/Status_pedido_relatorio__c.field-meta.xml
<CustomField>
    <fullName>Status_pedido_relatorio__c</fullName>
    <formula>CASE(
    TEXT(Pedido__r.Status),
    &quot;AGUARDANDO ACEITAÇÃO DA PROPOSTA&quot;, &quot;🔵 Aguardando Aceitação&quot;,
    &quot;AGUARDANDO ASSINATURA DO CONTRATO&quot;, &quot;✍️ Aguardando Assinatura&quot;,
    &quot;CANCELADO&quot;, &quot;❌ Cancelado&quot;,
    &quot;CONCLUÍDO&quot;, &quot;✅ Concluído&quot;,
    &quot;CONCLUÍDO (COM PENDENCIAS)&quot;, &quot;⚠️ Concluído (Pendências)&quot;,
    &quot;CONTRATO VIGENTE&quot;, &quot;📄 Contrato Ativo&quot;,
    &quot;PERDIDO&quot;, &quot;🔴 Perdido&quot;,
    &quot;SEPARAÇÃO/ENTREGA&quot;, &quot;📦 Separação/Entrega&quot;,
    &quot;EM CALIBRAÇÃO&quot;, &quot;🛠️ Em Calibração&quot;,
    &quot;AGUARDANDO DOCUMENTAÇÕES ASSINADAS&quot;, &quot;📜 Aguardando Documentos&quot;,
    &quot;❓ Status Desconhecido&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status pedido relatorio</label>
    <type>Text</type>
</CustomField>