force-app/main/default/objects/Faturamento__c/fields/Status_v2__c.field-meta.xml
<CustomField>
    <fullName>Status_v2__c</fullName>
    <formula>IF(
	recebido__c == 0,
	&apos;Não Recebido&apos;,
	IF(
		recebido__c &lt; 1,
		&apos;Recebimento Parcial&apos;,
		IF(
			recebido__c &gt;= 1,
			&apos;Recebimento Total&apos;,
			&apos;&apos;
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>