force-app/main/default/objects/Faturamento__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrega</fullName>
            </value>
            <value>
                <fullName>NF de Entrega Futura</fullName>
            </value>
            <value>
                <fullName>NF de Saída</fullName>
            </value>
            <value>
                <fullName>Devolução</fullName>
            </value>
            <value>
                <fullName>Dev da NF de Saída</fullName>
            </value>
            <value>
                <fullName>NF de Cancelamento</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
                <isActive>false</isActive>
                <label>Cancelado</label>
            </value>
            <value>
                <fullName>Entrega Futura</fullName>
                <isActive>false</isActive>
                <label>Entrega Futura</label>
            </value>
            <value>
                <fullName>Faturado</fullName>
                <isActive>false</isActive>
                <label>Faturado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>