force-app/main/default/objects/Faturamento__c/fields/Tipo_de_Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Faturamento__c</fullName>
    <formula>IF(Pedido__r.Ordem_de_trabalho__c &lt;&gt; NULL,&quot;Ordens de Trabalho&quot;,
IF(OR(Pedido__r.Contrato_de_Servi_o__c &lt;&gt; NULL, Contrato_de_servico__c &lt;&gt; NULL),&quot;Contratos&quot;, 
IF(OR(Pedido__r.Quote.Name &lt;&gt; NULL, Pedido__r.Opportunity.Name &lt;&gt; NULL), &quot;Cotações&quot;,
IF(Pedido__r.Demonstracao__c &lt;&gt; NULL, &quot;Demonstração&quot;,&quot;Sem identificação&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Faturamento</label>
    <type>Text</type>
</CustomField>