force-app/main/default/objects/Faturamento__c/fields/Total_comiss_o__c.field-meta.xml
<CustomField>
    <fullName>Total_comiss_o__c</fullName>
    <label>Total comissão</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>