force-app/main/default/objects/Faturamento__c/fields/Total_Faturado__c.field-meta.xml
<CustomField>
    <fullName>Total_Faturado__c</fullName>
    <label>Total Faturado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>