force-app/main/default/objects/Faturamento__c/fields/Total_recebido__c.field-meta.xml
<CustomField>
    <fullName>Total_recebido__c</fullName>
    <label>Total recebido</label>
    <summarizedField>Recebimentos__c.Valor_Pago__c</summarizedField>
    <summaryFilterItems>
        <field>Recebimentos__c.Cancelado__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Recebimentos__c.Nota_Fiscal1__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>