force-app/main/default/objects/Faturamento__c/fields/Total_recebido_parceiro__c.field-meta.xml
<CustomField>
    <fullName>Total_recebido_parceiro__c</fullName>
    <label>Total recebido (parceiro)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>