force-app/main/default/objects/Faturamento__c/fields/URL_Anexo__c.field-meta.xml
<CustomField>
    <fullName>URL_Anexo__c</fullName>
    <label>URL Anexo</label>
    <type>Url</type>
</CustomField>