force-app/main/default/objects/Faturamento__c/fields/Utilizacao__c.field-meta.xml
<CustomField>
    <fullName>Utilizacao__c</fullName>
    <formula>IF(
    Tipo_de_registro__c = &apos;Vendas (Hospcom)&apos; &amp;&amp; TEXT(Departamento3__c) != &apos;Locação&apos; &amp;&amp; TEXT(Tipo__c) != &apos;Dev da NF de Saída&apos;, 
    &apos;VENDA&apos;, 
    IF(
        Tipo_de_registro__c = &apos;Serviços (Mão de Obra)&apos;, 
        &apos;SERVIÇO&apos;, 
        IF(
            TEXT(Departamento3__c) = &apos;LOCAÇÃO&apos;, 
            &apos;LOCAÇÃO&apos;, 
            &apos;&apos;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilização</label>
    <type>Text</type>
</CustomField>