force-app/main/default/objects/Faturamento__c/fields/Valor_Faturado__c.field-meta.xml
<CustomField>
    <fullName>Valor_Faturado__c</fullName>
    <label>Valor faturado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>