force-app/main/default/objects/Faturamento__c/fields/Valor_faturado_permissao__c.field-meta.xml
<CustomField>
    <fullName>Valor_faturado_permissao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valor faturado permissão</label>
    <type>Checkbox</type>
</CustomField>