force-app/main/default/objects/Faturamento__c/fields/Valor_Frete__c.field-meta.xml
<CustomField>
    <fullName>Valor_Frete__c</fullName>
    <description>valor do frete</description>
    <label>Valor_Frete</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>