force-app/main/default/objects/Faturamento__c/recordTypes/Representacao.recordType-meta.xml
<RecordType>
    <fullName>Representacao</fullName>
    <active>true</active>
    <description>NF para recebimento de comissão de vendas feitas por parceiros.</description>
    <label>Representação</label>
</RecordType>