force-app/main/default/objects/Faturamento__c/recordTypes/Servicos.recordType-meta.xml
<RecordType>
    <fullName>Servicos</fullName>
    <active>true</active>
    <description>Mão de obra, metrologia, preventiva.</description>
    <label>Serviços (Mão de Obra)</label>
</RecordType>