force-app/main/default/objects/Faturamento__c/recordTypes/Servicos_Fabrica.recordType-meta.xml
<RecordType>
    <fullName>Servicos_Fabrica</fullName>
    <active>true</active>
    <label>Serviços (Fábrica)</label>
</RecordType>