force-app/main/default/objects/Faturamento__c/recordTypes/Vendas_Fabrica.recordType-meta.xml
<RecordType>
    <fullName>Vendas_Fabrica</fullName>
    <active>true</active>
    <label>Vendas (Fábrica)</label>
</RecordType>