force-app/main/default/objects/Faturamento__c/recordTypes/Vendas_Hospcom.recordType-meta.xml
<RecordType>
    <fullName>Vendas_Hospcom</fullName>
    <active>true</active>
    <description>Produtos, peças, acessórios.</description>
    <label>Vendas (Hospcom)</label>
</RecordType>