force-app/main/default/objects/Faturamento__c/validationRules/Conta_Hospcom_p_reg_representacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Conta_Hospcom_p_reg_representacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	RecordType.Name == &apos;Representação&apos;,
	AND(
		Faturamento_Feito2__r.Id != &apos;001i00000085QYb&apos;,
		Faturamento_Feito2__r.Id != &apos;0015A00001yGbVZ&apos;,
		Faturamento_Feito2__r.Id != &apos;0015A00001tSrPa&apos;
	)
)</errorConditionFormula>
    <errorDisplayField>Faturamento_Feito2__c</errorDisplayField>
    <errorMessage>Empresas válidas: Hospcom, GDB, Health Solution</errorMessage>
</ValidationRule>