force-app/main/default/objects/Faturamento__c/validationRules/Periodo_de_Faturamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Periodo_de_Faturamento</fullName>
    <active>true</active>
    <errorConditionFormula>Periodo_de_Faturamento_Fim__c = null  &amp;&amp;  Periodo_de_Faturamento_inicio__c = null &amp;&amp;  Contrato_de_servico__c = null</errorConditionFormula>
    <errorMessage>Preencha os períodos de faturamento e o contrato relacionado a este faturamento.</errorMessage>
</ValidationRule>