force-app/main/default/objects/Faturamento__c/validationRules/PERIODO_EM_LOCACOES.validationRule-meta.xml
<ValidationRule>
    <fullName>PERIODO_EM_LOCACOES</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(
  ISBLANK(Periodo_de_Faturamento_inicio__c) ,
  ISBLANK(Periodo_de_Faturamento_Fim__c)
),
ISBLANK(Contrato_de_servico__c)
)</errorConditionFormula>
    <errorMessage>Preencha o periodo de inicio e fim em caso de contrato de locação.</errorMessage>
</ValidationRule>