force-app/main/default/objects/Faturamento__c/listViews/Tipo_servi_os_Pedido.listView-meta.xml
<ListView>
    <fullName>Tipo_servi_os_Pedido</fullName>
    <columns>NAME</columns>
    <columns>Valor_real__c</columns>
    <columns>Data__c</columns>
    <columns>Tipo__c</columns>
    <columns>Status__c</columns>
    <columns>Departamento3__c</columns>
    <columns>Faturamento_Feito2__c</columns>
    <columns>Nome_da_Conta2__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Faturamento__c.Servicos</value>
    </filters>
    <filters>
        <field>Pedido__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Data__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2019 12:00 AM</value>
    </filters>
    <label>Tipo serviços (Pedido)</label>
</ListView>